[fix] fix loot、advancement bug